--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "firebase": "^6.3.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "firebase": "^6.6.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-firebaseui": "^3.1.2",
-    "react-icons": "^3.7.0",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
-    "reactstrap": "^8.0.1"
+    "react-icons": "^3.8.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.0.1",
+    "reactstrap": "^8.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
