--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "dependencies": {
     "firebase": "^6.6.2",
     "react": "^16.12.0",
+    "react-datetime-picker": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-firebaseui": "^3.1.2",
     "react-icons": "^3.8.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^3.3.0",
     "reactstrap": "^8.1.1"
   },
   "scripts": {
