--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # firebase api key
-/data/Fire.js
+/src/data/Fire.js
 
 # dependencies
 /node_modules
