--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "react-datetime-picker": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-firebaseui": "^3.1.2",
+    "react-google-maps": "^9.4.5",
     "react-icons": "^3.8.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
-    "reactstrap": "^8.1.1"
+    "reactstrap": "^8.1.1",
+    "recompose": "^0.30.0"
   },
   "scripts": {
     "start": "react-scripts start",
