--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "firebase": "^6.6.2",
+    "google-maps-react": "^2.0.2",
     "react": "^16.12.0",
     "react-datetime-picker": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-firebaseui": "^3.1.2",
     "react-google-maps": "^9.4.5",
     "react-icons": "^3.8.0",
+    "react-map-gl": "^5.2.3",
+    "react-map-gl-geocoder": "^2.0.11",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
